--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
         </div>
 
         <div class="input-group justify-content-center mb-3">
-          <%= f.submit "Sign up", class:"btn btn-outline-light btn-lg ", style:"font-size: 1rem" %>
+          <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class:"btn btn-outline-light btn-lg ", style:"font-size: 1rem") %>
         </div>
 
       <% end %>
