--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,12 +10,22 @@
             <%= f.text_field :title, class: "form-control shadow rounded", placeholder:"Title of article" %>
           </div>
         </div>
+
         <div class="form-group row mb-3">
           <%= f.label :description, class: "col-2 col-form-label text-light" %>
           <div class="col-10">
             <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder:"Description of article" %>
           </div>
         </div>
+
+        <div class="form-group row mb-3">
+          <%= f.label :category, class: "col-2 col-form-label text-light" %>
+          <div class="col-10">
+            <%= f.collection_select(:category_ids, Category.all, :id, :name, {prompt: "Make your selection from the list below (can be empty)"},
+            { multiple: true, size: 4, class: "form-select shadow rounded" }) %>
+          </div>
+        </div>
+
         <div class="input-group justify-content-center mb-3">
           <%= f.submit class:"btn btn-outline-light btn-lg " %>
         </div>
