--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,7 @@
 
             <%= link_to "Bloggers", users_path, class: "nav-link" %>
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Articles
@@ -21,6 +22,18 @@
               <%= link_to "View articles", articles_path, class: "dropdown-item" %>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <% if logged_in? && current_user.admin? %>
+              <%= link_to "Create new category", new_category_path, class: "dropdown-item" %>
+            <% end %>
+              <%= link_to "View categories", categories_path, class: "dropdown-item" %>
             </ul>
           </li>
 
